--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,21 +4,24 @@ kotlin = "2.1.10"
 coreKtx = "1.15.0"
 conductor = "4.0.0-preview-4"
 hilt = "2.55"
-hilt-conductor = "0.5.1"
+jetbrainsKotlinJvm = "2.1.10"
+ksp = "2.1.10-1.0.29"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 conductor = { group = "com.bluelinelabs", name = "conductor", version.ref = "conductor" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
-hilt-conductorPlugin = { group = "io.github.funnydevs", name = "hilt-conductor-plugin", version.ref = "hilt-conductor" }
-hilt-conductor = { group = "io.github.funnydevs", name = "hilt-conductor", version.ref = "hilt-conductor" }
-hilt-conductor-compiler = { group = "io.github.funnydevs", name = "hilt-conductor-processor", version.ref = "hilt-conductor" }
+javaxInject = { group = "javax.inject", name = "javax.inject", version = "1" }
+symbol-processing-api = { group = "com.google.devtools.ksp", name = "symbol-processing-api", version.ref = "ksp" }
+kotlinpoet = { group = "com.squareup", name = "kotlinpoet", version = "2.0.0" }
+kotlinpoet-ksp = { group = "com.squareup", name = "kotlinpoet-ksp", version = "2.0.0" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-ksp = { id = "com.google.devtools.ksp", version = "2.0.21-1.0.27" }
+ksp = { id = "com.google.devtools.ksp", version = "2.1.10-1.0.29" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-hilt-conductor = { id = "com.funnydevs.hilt-conductor.plugin" }
+jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+android-library = { id = "com.android.library", version.ref = "agp" }
